2007-07-26  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__glpk__.cc: Include glpk/glpk.h if
	HAVE_GLPK_GLPK_H is defined.

2007-07-26  David Bateman  <dbateman@free.fr>

	* pr-output.cc (Frats): Return character array with same number of
	rows as original value.

2007-07-26  John W. Eaton  <jwe@octave.org>

	* pt-bp.h (MAYBE_DO_BREAKPOINT): Rename cur_fcn to xfcn.

	* version.h (OCTAVE_VERSION): Now 2.9.13+.

2007-07-25  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.13
	(OCTAVE_API_VERSION): Now api-v25.
	(OCTAVE_RELEASE_DATE): Now 2007-07-25.

	* pt-bp.h (MAYBE_DO_BREAKPOINT): Rename fcn to curr_fcn.

2007-07-25  David Bateman  <dbateman@free.fr>

	* Makefile.in: 	Adjust DISTFILES to allow out of tree "make dist" 
	to work.

2007-07-24  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.cc (color_property::operator = (const octave_value&)):
	New method.
	* graphics.h: Provide decl.

2007-07-24  Rafael Laboissiere  <rafael@debian.org>

	* oct-conf.h.in (OCTAVE_CONF_RUNTEST): Delete definition.
	* toplevel.cc (Foctave_config_info): Remove RUNTEST from struct.

2007-07-23  David Bateman  <dbateman@free.fr>

	* pr-output.cc (rat_format, rat_string_len): Global variable
	controlling behavior of rational approximation. Use throughout.
	(class pr_rational_float): New class for rational approximation of
	floats, specifically with the << operator defined.
	(std::ostream& operator << (std::ostream&, const
	pr_rational_float&)): Operator to print rational approximations of
	double values.
	(std::string rational_approx (double, int)): Function to convert a
	double value to a string of maximum length giving the rational
	approximation.
	(pr_any_float): Include the output of rational approximations.
	(Fformat): Add the "rat" format as an option.
	(Frats): New function.

2007-07-23  Aquil H. Abdullah  <aquil.abdullah@gmail.com>

	* mex.cc (mxCreateStructArray): Declare second arg as const.
	* mexproto.h (mxCreateStructArray): Ditto.
